--- a/04-resources/ansible-create.yml
+++ b/04-resources/ansible-create.yml
@@ -6,4 +6,4 @@
         instance_type: t3.micri
         image_id: ami-0a017d8ceb274537d
         tags:
-          Environment: ansible-test
+          Name: ansible-test
